Added banner changes, and featured-products

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -139,6 +139,10 @@
   padding: 1.3rem 1rem;
 }
 
+.card__information .vendor{
+  margin-bottom: .5rem;
+}
+
 .card:not(.ratio) > .card__content {
   grid-template-rows: max-content minmax(0, 1fr) max-content auto;
 }
