--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -145,6 +145,10 @@
       </div>
       <div class="card__content">
         <div class="card__information">
+             {%- if show_vendor -%}
+              <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
+              <div class="caption-with-letter-spacing light vendor">{{ card_product.vendor }}</div>
+            {%- endif -%}
           <h3
             class="card__heading{% if card_product.featured_media or settings.card_style == 'standard' %} h5{% endif %}"
             {% if card_product.featured_media or settings.card_style == 'card' %}
@@ -161,11 +165,6 @@
             </a>
           </h3>
           <div class="card-information">
-            {%- if show_vendor -%}
-              <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
-              <div class="caption-with-letter-spacing light">{{ card_product.vendor }}</div>
-            {%- endif -%}
-
             <span class="caption-large light">{{ block.settings.description | escape }}</span>
 
             {%- if show_rating and card_product.metafields.reviews.rating.value != blank -%}
@@ -603,22 +602,24 @@
           </div>
         </div>
       </div>
-      <div class="card__content">
-        <div class="card__information">
-          <h3 class="card__heading card__heading--placeholder{% if settings.card_style == 'standard' %} h5{% endif %}">
-            <a role="link" aria-disabled="true" class="full-unstyled-link">
-              {{ 'onboarding.product_title' | t }}
-            </a>
-          </h3>
-          <div class="card-information">
-            {%- if show_vendor -%}
-              <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
-              <div class="caption-with-letter-spacing light">{{ 'products.product.vendor' | t }}</div>
-            {%- endif -%}
-            {% render 'price', placeholder: placeholder, show_compare_at_price: true %}
-          </div>
-        </div>
-      </div>
+  <div class="card__content">
+  <div class="card__information">
+    {%- if show_vendor -%}
+      <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
+      <div class="caption-with-letter-spacing light vendor">{{ 'products.product.vendor' | t }}</div>
+    {%- endif -%}
+
+    <h3 class="card__heading card__heading--placeholder{% if settings.card_style == 'standard' %} h5{% endif %}">
+      <a role="link" aria-disabled="true" class="full-unstyled-link">
+        {{ 'onboarding.product_title' | t }}
+      </a>
+    </h3>
+
+    <div class="card-information">
+      {% render 'price', placeholder: placeholder, show_compare_at_price: true %}
+    </div>
+  </div>
+</div>
     </div>
   </div>
 {%- endif -%}
