adjustments to collection banner

--- a/assets/component-collection-hero.css
+++ b/assets/component-collection-hero.css
@@ -1,6 +1,8 @@
 .collection-hero__inner {
   display: flex;
   flex-direction: column;
+  position: relative;
+  height: 37.5vw;
 }
 
 .collection-hero--with-image .collection-hero__inner {
@@ -21,6 +23,9 @@
 
 .collection-hero__text-wrapper {
   flex-basis: 100%;
+  z-index: 100;
+  display: flex; justify-content: center; align-items: center; flex-direction: column; text-align: center; gap: .25rem;
+
 }
 
 @media screen and (min-width: 750px) {
@@ -36,21 +41,22 @@
 }
 
 .collection-hero__title {
-  margin: 2.5rem 0;
+  margin: 0;
+  font-size: 10rem;
+  font-weight: 700;
+}
+.collection-hero__subtitle {
+  margin: 0;
+  color: white;
+}
+.collection-hero__button {
+  margin-top: 2.5rem;
 }
 
-.collection-hero__title + .collection-hero__description {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  font-size: 1.6rem;
-  line-height: calc(1 + 0.5 / var(--font-body-scale));
-}
 
 @media screen and (min-width: 750px) {
   .collection-hero__title + .collection-hero__description {
     font-size: 1.8rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
   }
 
   .collection-hero__description {
@@ -66,21 +72,22 @@
   margin: 0;
 }
 
-.collection-hero--with-image .collection-hero__text-wrapper {
-  padding: 5rem 0 4rem;
-}
+.collection-hero--with-image .collection-hero__text-wrapper {}
 
-.collection-hero__image-container {
+.images-container                 { position: absolute; left: 0; right: 0; display: flex; flex-direction: row; top: 0; bottom: 0;}
+.images-container::after          {content: ''; position: absolute; left: 0; right: 0; top: 0; bottom: 0; background-color: black; opacity: 0.4;} 
+.images-container .collection-hero__image-container {flex: 1;} 
+/* .collection-hero__image-container {
   border: var(--media-border-width) solid rgba(var(--color-foreground), var(--media-border-opacity));
   border-radius: var(--media-radius);
   box-shadow: var(--media-shadow-horizontal-offset) var(--media-shadow-vertical-offset) var(--media-shadow-blur-radius)
     rgba(var(--color-shadow), var(--media-shadow-opacity));
-}
+} */
 
 @media screen and (max-width: 749px) {
-  .collection-hero__image-container {
+  /* .collection-hero__image-container {
     height: 20rem;
-  }
+  } */
 }
 
 @media screen and (min-width: 750px) {
@@ -89,10 +96,10 @@
     flex-basis: 50%;
   }
 
-  .collection-hero__image-container {
+  /* .collection-hero__image-container {
     align-self: stretch;
     flex: 1 0 50%;
     margin-left: 3rem;
     min-height: 20rem;
-  }
+  } */
 }
