--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -38,6 +38,26 @@
 
 <div class="section-{{ section.id }}-padding gradient color-{{ section.settings.color_scheme }}">
   <div class="page-width">{% render 'breadcrumbs' %}</div>
+  {%- comment -%} Check of de collectie subcollecties heeft via metafield {%- endcomment -%}
+{% assign related_collections = collection.metafields.custom.related_collections.value %}
+
+{% if related_collections != blank %}
+  <div class="collection-grid-subcollections page-width">
+    {% for subcollection in related_collections %}
+      <a href="{{ subcollection.url }}" class="collection-card">
+        {% assign img_width = 800 %}
+{% assign img_height = img_width | times: 9 | divided_by: 16 %}
+
+<img 
+  src="{{ subcollection.image | image_url: width: img_width }}" 
+  alt="{{ subcollection.title }}" 
+  width="{{ img_width }}" 
+  height="{{ img_height }}">
+        <h2>{{ subcollection.title }}</h2>
+      </a>
+    {% endfor %}
+  </div>
+{% else %}
   {%- paginate collection.products by section.settings.products_per_page -%}
     {% comment %} Sort is the first tabbable element when filter type is vertical {% endcomment %}
     {%- if section.settings.enable_sorting and section.settings.filter_type == 'vertical' -%}
@@ -191,6 +211,7 @@
       </div>
     </div>
   {%- endpaginate -%}
+  {% endif %}
   {% if section.settings.image_shape == 'arch' %}
     {{ 'mask-arch.svg' | inline_asset_content }}
   {%- endif -%}
