--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -97,3 +97,5 @@
 .collection__view-all a:not(.link) {
   margin-top: 1rem;
 }
+
+.collection-grid-subcollections   {display: grid; grid-template-columns: repeat(5, 1fr); display: none !important;}
