Working collection grid added to product grid

--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -98,4 +98,10 @@
   margin-top: 1rem;
 }
 
-.collection-grid-subcollections   {display: grid; grid-template-columns: repeat(5, 1fr); display: none !important;}
+.collection-grid-subcollections   {display: grid; grid-template-columns: repeat(5, 1fr);
+  .collection-card                {padding: .5rem; box-sizing: border-box; width: 100%;
+    .collection-card-top          {aspect-ratio: 1 / 1; width: 100%; 
+      img                           {object-fit: cover; width: 100%; height: 100%;}
+    }
+  }
+}
