--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -100,7 +100,7 @@
 
 .collection-grid-subcollections   {display: grid; grid-template-columns: repeat(5, 1fr);
   .collection-card                {padding: .5rem; box-sizing: border-box; width: 100%;
-    .collection-card-top          {aspect-ratio: 1 / 1; width: 100%; 
+    .collection-card-top          {aspect-ratio: 1 / 1; width: 100%; overflow: hidden;
       img                           {object-fit: cover; width: 100%; height: 100%;}
     }
   }
